tests-snapshots/dbc-cantools/issue_199.snap.stderr
error[E0425]: cannot find type `GearShifterGearShifter` in this scope
    --> tests-snapshots/dbc-cantools/issue_199.snap.rs:991:35
     |
 991 |     pub fn gear_shifter(&self) -> GearShifterGearShifter {
     |                                   ^^^^^^^^^^^^^^^^^^^^^^ help: an enum with a similar name exists: `GearShifterLeftBlinker`
...
1106 | pub enum GearShifterLeftBlinker {
     | ------------------------------- similarly named enum `GearShifterLeftBlinker` defined here

error[E0425]: cannot find type `CruiseButtonsCruiseButtons` in this scope
    --> tests-snapshots/dbc-cantools/issue_199.snap.rs:2054:37
     |
2054 |     pub fn cruise_buttons(&self) -> CruiseButtonsCruiseButtons {
     |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`
...
2268 | pub enum CruiseButtons2LkaGapButton {
     | ----------------------------------- similarly named enum `CruiseButtons2LkaGapButton` defined here

error[E0433]: failed to resolve: use of undeclared type `GearShifterGearShifter`
   --> tests-snapshots/dbc-cantools/issue_199.snap.rs:994:18
    |
994 |             3 => GearShifterGearShifter::Park,
    |                  ^^^^^^^^^^^^^^^^^^^^^^
    |                  |
    |                  use of undeclared type `GearShifterGearShifter`
    |                  help: an enum with a similar name exists: `GearShifterLeftBlinker`

error[E0433]: failed to resolve: use of undeclared type `GearShifterGearShifter`
   --> tests-snapshots/dbc-cantools/issue_199.snap.rs:995:18
    |
995 |             0 => GearShifterGearShifter::DriveLow,
    |                  ^^^^^^^^^^^^^^^^^^^^^^
    |                  |
    |                  use of undeclared type `GearShifterGearShifter`
    |                  help: an enum with a similar name exists: `GearShifterLeftBlinker`

error[E0433]: failed to resolve: use of undeclared type `GearShifterGearShifter`
   --> tests-snapshots/dbc-cantools/issue_199.snap.rs:996:18
    |
996 |             _ => GearShifterGearShifter::_Other(self.gear_shifter_raw()),
    |                  ^^^^^^^^^^^^^^^^^^^^^^
    |                  |
    |                  use of undeclared type `GearShifterGearShifter`
    |                  help: an enum with a similar name exists: `GearShifterLeftBlinker`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199.snap.rs:2057:18
     |
2057 |             6 => CruiseButtonsCruiseButtons::Cancel,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199.snap.rs:2058:18
     |
2058 |             5 => CruiseButtonsCruiseButtons::Main,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199.snap.rs:2059:18
     |
2059 |             3 => CruiseButtonsCruiseButtons::Set,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199.snap.rs:2060:18
     |
2060 |             2 => CruiseButtonsCruiseButtons::Resume,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199.snap.rs:2061:18
     |
2061 |             1 => CruiseButtonsCruiseButtons::None,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199.snap.rs:2062:18
     |
2062 |             _ => CruiseButtonsCruiseButtons::_Other(self.cruise_buttons_raw()),
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199.snap.rs:65:13
   |
62 |             DriverDoorStatus::MESSAGE_ID => {
   |             ---------------------------- matches all the relevant values
...
65 |             Chime::MESSAGE_ID => Messages::Chime(Chime::try_from(payload)?),
   |             ^^^^^^^^^^^^^^^^^ no value can reach this
   |
   = note: `-D unreachable-patterns` implied by `-D warnings`
   = help: to override `-D warnings` add `#[allow(unreachable_patterns)]`

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199.snap.rs:69:13
   |
62 |             DriverDoorStatus::MESSAGE_ID => {
   |             ---------------------------- matches all the relevant values
...
69 |             SteeringWheelAngle::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199.snap.rs:72:13
   |
66 |             BlinkerStatus::MESSAGE_ID => {
   |             ------------------------- matches all the relevant values
...
72 |             GearShifter::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199.snap.rs:78:13
   |
62 |             DriverDoorStatus::MESSAGE_ID => {
   |             ---------------------------- matches all the relevant values
...
78 |             BrakePedal::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199.snap.rs:84:13
   |
62 |             DriverDoorStatus::MESSAGE_ID => {
   |             ---------------------------- matches all the relevant values
...
84 |             VehicleSpeed::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199.snap.rs:87:13
   |
81 |             WheelSpeed::MESSAGE_ID => {
   |             ---------------------- matches all the relevant values
...
87 |             CruiseButtons::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
